# EPHESSOS

./: .gitignore  LICENSE  README.md  __init__.py  eros_ephem.csv  pyproject.toml  requirements.txt  setup.py
ephessos/: __init__.py  core.py
notebooks/: H1_Eros_from_JPL_Horizons.ipynb  H2_cone_search.ipynb  H3_custom_multi_SSO_query.ipynb  NEA-test.txt  TEST.ipynb  initial_assessment.ipynb
